got basic version working for gravity sim

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,12 @@ find_package(SDL2 REQUIRED)
 find_package(OpenGL REQUIRED)
 set(GLEW_USE_STATIC_LIBS ON)
 find_package(GLEW REQUIRED)
+find_package(cglm REQUIRED)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_executable(cviator src/main.c)
-target_link_libraries(cviator PRIVATE ${SDL2_LIBRARIES} OpenGL::OpenGL GLEW::GLEW)
+# the m at the end is for OpenMPI (used by cglm)
+target_link_libraries(cviator PRIVATE ${SDL2_LIBRARIES} OpenGL::OpenGL GLEW::GLEW cglm::cglm m)
 target_compile_features(cviator PUBLIC c_std_23)
 target_compile_definitions(cviator PRIVATE CV_DEBUG GLEW_STATIC)
