--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,5 +17,6 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_executable(cviator src/main.c)
 # the m at the end is for OpenMPI (used by cglm)
 target_link_libraries(cviator PRIVATE ${SDL2_LIBRARIES} OpenGL::OpenGL GLEW::GLEW cglm::cglm m)
+target_include_directories(cviator PUBLIC 3rdparty)
 target_compile_features(cviator PUBLIC c_std_23)
 target_compile_definitions(cviator PRIVATE CV_DEBUG GLEW_STATIC)
